had to fix z-index

--- a/src/Components/FeaturedProjects/Project.css
+++ b/src/Components/FeaturedProjects/Project.css
@@ -21,6 +21,7 @@
     /* justify-content: space-around; */
 	align-items: stretch;
 	align-content: stretch;
+    z-index: 0;
 }
 
 .small-text {
