--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,7 @@
 
 .header-container {
     /* position: absolute; */
-    position: sticky;
+    /* position: sticky; */
     margin: none;
     /* height: 10vh; */
     height: 60px;
