--- a/src/Components/MobileLogin/MobileLogin.css
+++ b/src/Components/MobileLogin/MobileLogin.css
@@ -13,7 +13,7 @@
     top: 11vh;
     right: 15px;
     position: absolute;
-    z-index:100;
+    z-index:10;
 }
 
 .input-element {
